--- a/api_client/templates/api_client/booking_create.html
+++ b/api_client/templates/api_client/booking_create.html
@@ -1,268 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     {% load static %}
     <script src="{% static 'js/scripts.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <title>Create Booking</title>
-    <style>
-      .dark-mode {
-        background-color: #19222b;
-        color: #fff;
-      }
+    <title class="translate" data-langpl="Utwórz Rezerwację" data-langen="Create Booking">Create Booking</title>
+</head>
 
-      body.dark-mode tr:hover {
-        background-color: #555;
-      }
-
-      body.dark-mode th {
-        background-color: #333;
-        color: #fff;
-      }
-
-      .toggle-container {
-        display: flex;
-        align-items: center;
-        color: #fff;
-      }
-
-      #dark-mode-toggle {
-        appearance: none;
-        -webkit-appearance: none;
-        background-color: #61a9d9;
-        width: 60px;
-        height: 34px;
-        border-radius: 17px;
-        position: relative;
-        outline: none;
-        cursor: pointer;
-        margin-right: 10px;
-      }
-
-      #dark-mode-toggle:checked {
-        background-color: #257fbb;
-      }
-
-      #dark-mode-toggle::before {
-        content: '';
-        position: absolute;
-        width: 26px;
-        height: 26px;
-        background-color: #fff;
-        border-radius: 50%;
-        top: 4px;
-        left: 4px;
-        transition: transform 0.3s ease;
-      }
-
-      #dark-mode-toggle:checked::before {
-        transform: translateX(26px);
-      }
-
-      body {
-        font-family: Arial, sans-serif;
-        margin-top: 80px; /* Dostosuj wartość w zależności od wysokości belki górnej */
-        margin-bottom: 60px;
-        background-color: #fff;
-      }
-      
-      nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #3498db;
-        padding: 10px;
-        z-index: 1000;
-      }
-
-      footer {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: #3498db;
-        color: #fff;
-        padding: 10px;
-        text-align: center;
-        display: flex;
-        justify-content: space-between; /* Aby umieścić elementy obok siebie */
-        align-items: center;
-        z-index: 1000; /* Ustawiamy z-index, aby stopka była na wierzchu innych elementów */
-      }
-      
-      nav a {
-        text-decoration: none;
-        color: #fff;
-        padding: 8px;
-        margin-right: 10px;
-        border-radius: 4px;
-      }
-      
-      nav a:hover {
-        background-color: #2980b9;
-      }
-      
-      table {
-        width: 98%;
-        border-collapse: collapse;
-        margin-top: 20px;
-        margin-left: auto;  
-        margin-right: auto;
-      }
-      
-      th,
-      td {
-        padding: 12px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-      }
-      
-      th {
-        background-color: #f2f2f2;
-        color: #333;
-      }
-      
-      tr:hover {
-        background-color: #f5f5f5;
-      }
-      
-      a {
-        text-decoration: none;
-        color: #3498db;
-      }
-      
-      button {
-        padding: 10px;
-        margin-top: 10px;
-        cursor: pointer;
-        background-color: #3498db;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
-      }
-      
-      button:disabled {
-        background-color: #95a5a6;
-        cursor: not-allowed;
-      }
-
-      form {
-        margin-top: 20px;
-        width: 100%;
-        display: inline-block;
-      }
-
-      form label {
-        display: block;
-        margin-bottom: 5px;
-      }
-
-      form input,
-      form textarea {
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 10px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-      }
-
-      form button {
-        padding: 10px;
-        cursor: pointer;
-        background-color: #3498db;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
-      }
-
-      form button:disabled {
-        background-color: #95a5a6;
-        cursor: not-allowed;
-      }
-
-      body.dark-mode input[type="text"],
-      body.dark-mode textarea {
-        background-color: #333; /* Dostosuj kolor tła pola tekstowego w trybie ciemnym */
-        color: #fff; /* Dostosuj kolor tekstu w polu tekstowym w trybie ciemnym */
-      }
-
-      .loading-overlay {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(255, 255, 255, 0.7);
-        justify-content: center;
-        align-items: center;
-        z-index: 9999;
-      }
-
-      .loading-spinner {
-        border: 8px solid #f3f3f3;
-        border-top: 8px solid #3498db;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        animation: spin 1s linear infinite;
-      }
-
-      @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-      }
-    </style>
-    <title>Create Booking</title>
-  </head>
-  <body>
+<body>
     <nav>
-      <a href="/booking_list/">Bookings List</a>
-      <a href="/booking_create/">Create Booking</a>
+        <a href="/booking_list/" class="translate" data-langpl="Lista Rezerwacji" data-langen="Bookings List">Bookings List</a>
+        <a href="/booking_create/" class="translate" data-langpl="Utwórz Rezerwację" data-langen="Create Booking">Create Booking</a>
     </nav>
 
-    <h2>Create Booking</h2>
+    <div class="box-content">
+        <h2 class="translate" data-langpl="Utwórz Rezerwację" data-langen="Create Booking">Create Booking</h2>
 
-    <form method="post" onsubmit="showLoading()">
-      {% csrf_token %}
-      <label for="name">Name:</label>
-      <input type="text" name="name" required required style="width: 50%;">
-      <br>
+        <form method="post" onsubmit="showLoading()">
+            {% csrf_token %}
+            <label for="name" class="translate" data-langpl="Imię:" data-langen="Name:">Name:</label>
+            <input type="text" name="name" required>
+            <br>
 
-      <label for="room">Room:</label>
-      <input type="text" name="room" required required style="width: 50%;">
-      <br>
+            <label for="room" class="translate" data-langpl="Pokój:" data-langen="Room:">Room:</label>
+            <input type="text" name="room" required>
+            <br>
 
-      <label for="details">Details:</label>
-      <textarea name="details" required required style="width: 50%;"></textarea>
-      <br>
+            <label for="details" class="translate" data-langpl="Szczegóły:" data-langen="Details:">Details:</label>
+            <textarea name="details" required></textarea>
+            <br>
 
-      <button type="submit">Create Booking</button>
-    </form>
+            <button type="submit" class="translate" data-langpl="Utwórz Rezerwację" data-langen="Create Booking">Create Booking</button>
+        </form>
+    </div>
 
     <div class="loading-overlay" id="loadingOverlay">
-      <div class="loading-spinner"></div>
+        <div class="loading-spinner"></div>
     </div>
 
     <footer>
-      <p>&copy; 2023 stasiekq</p>
-      <div class="toggle-container">
-        <input type="checkbox" id="dark-mode-toggle">
-        Dark Mode
-      </div>
+        <p class="translate" data-langpl="&copy; 2023 stasiekq" data-langen="&copy; 2023 stasiekq">&copy; 2023 stasiekq</p>
+
+        <button class="lang-switch" data-lang="pl">PL</button>
+        <button class="lang-switch" data-lang="en">EN</button>
+
+        <div class="toggle-container">
+            <p class="translate" data-langpl="Tryb ciemny" data-langen="Dark Mode">Dark Mode</p>
+            <input type="checkbox" id="dark-mode-toggle">
+        </div>
     </footer>
 
     <script>
-      function showLoading() {
-        document.getElementById("loadingOverlay").style.display = "flex";
-        setTimeout(function() {
-          document.getElementById("loadingOverlay").style.display = "none";
-        }, 2000);
-      }
+        function showLoading() {
+            document.getElementById("loadingOverlay").style.display = "flex";
+            setTimeout(function () {
+                document.getElementById("loadingOverlay").style.display = "none";
+            }, 2000);
+        }
     </script>
-  </body>
+</body>
+
 </html>
