--- a/api_client/templates/api_client/booking_details.html
+++ b/api_client/templates/api_client/booking_details.html
@@ -4,178 +4,17 @@
 <head>
     {% load static %}
     <script src="{% static 'js/scripts.js' %}"></script>
-
-    <style>
-        .dark-mode {
-            background-color: #19222b;
-            color: #fff;
-        }
-
-        body.dark-mode tr:hover {
-            background-color: #555;
-        }
-
-        body.dark-mode th {
-            background-color: #333;
-            color: #fff;
-        }
-
-        .toggle-container {
-            display: flex;
-            align-items: center;
-            color: #fff;
-        }
-
-        #dark-mode-toggle {
-            appearance: none;
-            -webkit-appearance: none;
-            background-color: #61a9d9;
-            width: 60px;
-            height: 34px;
-            border-radius: 17px;
-            position: relative;
-            outline: none;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-
-        #dark-mode-toggle:checked {
-            background-color: #257fbb;
-        }
-
-        #dark-mode-toggle::before {
-            content: '';
-            position: absolute;
-            width: 26px;
-            height: 26px;
-            background-color: #fff;
-            border-radius: 50%;
-            top: 4px;
-            left: 4px;
-            transition: transform 0.3s ease;
-        }
-
-        #dark-mode-toggle:checked::before {
-            transform: translateX(26px);
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin-top: 80px;
-            margin-bottom: 60px;
-            background-color: #fff;
-            margin-left: 20px;
-            width: 98%;
-            margin-right: auto;
-        }
-
-        nav {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #3498db;
-            padding: 10px;
-            z-index: 1000;
-        }
-
-        footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: #3498db;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            z-index: 1000;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #fff;
-            padding: 8px;
-            margin-right: 10px;
-            border-radius: 4px;
-        }
-
-        nav a:hover {
-            background-color: #2980b9;
-        }
-
-        button {
-          width: 90px;
-          padding: 10px;
-          margin-top: 10px;
-          cursor: pointer;
-          background-color: #3498db;
-          color: #fff;
-          border: none;
-          border-radius: 4px;
-        }
-
-        button.yes {
-            background-color: #2ecc71; /* Kolor zielony dla przycisku "Yes, delete" */
-            color: #fff;
-            margin-right: 2px;
-        }
-
-        button.no {
-            background-color: #d44c4c; /* Kolor niebieski dla przycisku "No, go back" */
-            color: #fff;
-            margin-right: 1px;
-        }
-
-        button:disabled {
-        background-color: #95a5a6;
-        cursor: not-allowed;
-        }
-
-        table {
-            width: 50%;
-            border-collapse: collapse;
-            margin-top: 20px;
-            border: 1px solid #ddd;
-        }
-
-        th,
-        td {
-            padding: 12px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f2f2f2;
-            color: #333;
-        }
-
-        tr:hover {
-            background-color: #f5f5f5;
-        }
-
-        a {
-            text-decoration: none;
-            color: #3498db;
-        }
-
-    </style>
-    <title>Booking Details</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'style-details.css' %}">
+    <title class="translate" data-langpl="Szczegóły Rezerwacji" data-langen="Booking Details">Booking Details</title>
 </head>
 
 <body>
     <nav>
-        <a href="/booking_list/">Bookings List</a>
-        <a href="/booking_create/">Create Booking</a>
+        <a href="/booking_list/" class="translate" data-langpl="Lista Rezerwacji" data-langen="Bookings List">Bookings List</a>
+        <a href="/booking_create/" class="translate" data-langpl="Dodaj Rezerwację" data-langen="Create Booking">Create Booking</a>
     </nav>
 
-    <h2>Booking Details</h2>
+    <h2 class="translate" data-langpl="Szczegóły Rezerwacji" data-langen="Booking Details">Booking Details</h2>
 
     <table>
         <tr>
@@ -183,29 +22,32 @@
             <td>{{ booking.id }}</td>
         </tr>
         <tr>
-            <th>Name</th>
+            <th class="translate" data-langpl="Imię" data-langen="Name">Name</th>
             <td>{{ booking.name }}</td>
         </tr>
         <tr>
-            <th>Room</th>
+            <th class="translate" data-langpl="Pokój" data-langen="Room">Room</th>
             <td>{{ booking.room }}</td>
         </tr>
         <tr>
-            <th>Details</th>
+            <th class="translate" data-langpl="Szczegóły" data-langen="Details">Details</th>
             <td>{{ booking.details }}</td>
         </tr>
     </table>
-    <button onclick="window.location.href='/booking_update/{{ booking.id }}/'" class = "yes">Update</button>
-    <button onclick="window.location.href='/booking_delete/{{ booking.id }}/'" class = "no">Delete</button>
+    <button onclick="window.location.href='/booking_update/{{ booking.id }}/'" class="translate yes" data-langpl="Aktualizuj" data-langen="Update">Update</button>
+    <button onclick="window.location.href='/booking_delete/{{ booking.id }}/'" class="translate no" data-langpl="Usuń" data-langen="Delete">Delete</button>
 
-    <button onclick="window.location.href='/booking_list/'">Back</button>
-
+    <button onclick="window.location.href='/booking_list/'" class="translate" data-langpl="Powrót" data-langen="Back">Back</button>
 
     <footer>
-        <p>&copy; 2023 stasiekq</p>
+        <p class="translate" data-langpl="&copy; 2023 stasiekq" data-langen="&copy; 2023 stasiekq">&copy; 2023 stasiekq</p>
+
+        <button class="lang-switch" data-lang="pl">PL</button>
+        <button class="lang-switch" data-lang="en">EN</button>
+
         <div class="toggle-container">
+            <p class="translate" data-langpl="Tryb ciemny" data-langen="Dark Mode">Dark Mode</p>
             <input type="checkbox" id="dark-mode-toggle">
-            Dark Mode
         </div>
     </footer>
 
